--- a/index.html
+++ b/index.html
@@ -111,19 +111,17 @@
 										<li><a href="https://github.com/jessejoosse/PortfolioProjects/blob/main/Automating%20Crypto%20Website%20API%20Pull%20Using%20Python.ipynb" class="button" target="_blank">View Project</a></li>
 									</ul>
 								</article>
-								<!-- <article>
-									<header>
-										
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+								<article>
+									<header>										
+										<h2><a href="https://github.com/jessejoosse/PortfolioProjects/blob/main/Power%20BI%20-%20Data%20Professional%20Survey.pdf" target="_blank">DATA PROFESSIONAL SURVEY WITH POWER BI</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/jessejoosse/PortfolioProjects/blob/main/Power%20BI%20-%20Data%20Professional%20Survey.pdf" class="image fit"  target="_blank"><img src="images/PowerBI_DataProfessionalSurvey.jpg" alt="" /></a>
+									<p>In this project, I analyzed survey data from data professionals across various countries, creating an interactive Power BI dashboard to visualize key insights.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/jessejoosse/PortfolioProjects/blob/main/Power%20BI%20-%20Data%20Professional%20Survey.pdf" class="button" target="_blank">View Project</a></li>
 									</ul>
 								</article>
-								<article>
+								<!-- <article>
 									<header>
 										
 										<h2><a href="#">Augue lorem<br />
