--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 										<h2><a href="https://github.com/jessejoosse/PortfolioProjects/blob/main/Power%20BI%20-%20Data%20Professional%20Survey.pdf" target="_blank">DATA PROFESSIONAL SURVEY WITH POWER BI</a></h2>
 									</header>
 									<a href="https://github.com/jessejoosse/PortfolioProjects/blob/main/Power%20BI%20-%20Data%20Professional%20Survey.pdf" class="image fit"  target="_blank"><img src="images/PowerBI_DataProfessionalSurvey.jpg" alt="" /></a>
-									<p>In this project, I analyzed survey data from data professionals across various countries, creating an interactive Power BI dashboard to visualize key insights.</p>
+									<p>In this project, we analyze survey data from data professionals across various countries, creating an interactive Power BI dashboard to visualize key insights.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/jessejoosse/PortfolioProjects/blob/main/Power%20BI%20-%20Data%20Professional%20Survey.pdf" class="button" target="_blank">View Project</a></li>
 									</ul>
