Add Coffee Orders Dashboard to data portfolio website.

--- a/index.html
+++ b/index.html
@@ -116,9 +116,20 @@
 										<h2><a href="https://github.com/jessejoosse/PortfolioProjects/blob/main/Power%20BI%20-%20Data%20Professional%20Survey.pdf" target="_blank">DATA PROFESSIONAL SURVEY WITH POWER BI</a></h2>
 									</header>
 									<a href="https://github.com/jessejoosse/PortfolioProjects/blob/main/Power%20BI%20-%20Data%20Professional%20Survey.pdf" class="image fit"  target="_blank"><img src="images/PowerBI_DataProfessionalSurvey.jpg" alt="" /></a>
-									<p>In this project, I analyzed survey data from data professionals across various countries, creating an interactive Power BI dashboard to visualize key insights.</p>
+									<p>In this project, we analyze survey data from data professionals across various countries, creating an interactive Power BI dashboard to visualize key insights.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/jessejoosse/PortfolioProjects/blob/main/Power%20BI%20-%20Data%20Professional%20Survey.pdf" class="button" target="_blank">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										
+										<h2><a href="#">Coffee Sales Dashboard<br /> in Excel</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/excel_coffee_dashboard.jpg" alt="" /></a>
+									<p>In this project, we build an interactive Excel dashboard for a global coffee company, analyzing coffee bean orders and customer trends using dynamic charts, slicers, and filters.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<!-- <article>
