Add Coffee Orders Dashboard project link to data portfolio website.

--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Coffee Sales Dashboard<br /> in Excel</a></h2>
+										<h2><a href="https://github.com/jessejoosse/PortfolioProjects/blob/main/Coffee%20Orders%20Dashboard.xlsx" target="_blank">Coffee Sales Dashboard<br /> in Excel</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/excel_coffee_dashboard.jpg" alt="" /></a>
+									<a href="https://github.com/jessejoosse/PortfolioProjects/blob/main/Coffee%20Orders%20Dashboard.xlsx" class="image fit" target="_blank"><img src="images/excel_coffee_dashboard.jpg" alt="" /></a>
 									<p>In this project, we build an interactive Excel dashboard for a global coffee company, analyzing coffee bean orders and customer trends using dynamic charts, slicers, and filters.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/jessejoosse/PortfolioProjects/blob/main/Coffee%20Orders%20Dashboard.xlsx" class="button" target="_blank">View Project</a></li>
 									</ul>
 								</article>
 								<!-- <article>
